--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "laravel/pint": "^1.22",
         "larastan/larastan": "^3.4",
         "orchestra/testbench": "^10.3",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "timacdonald/log-fake": "^2.4"
     },
     "config": {
         "allow-plugins": {
