--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kirschbaum/monitor",
+    "name": "kirschbaum-development/monitor",
     "description": "Laravel observability toolkit with critical control points, structured logging, performance timing, and trace context.",
     "type": "library",
     "license": "MIT",
@@ -24,6 +24,12 @@
             "email": "belisar.hoxholli@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/kirschbaum-development/redactor"
+        }
+    ],
     "require-dev": {
         "pestphp/pest": "^3.8",
         "laravel/pint": "^1.22",
@@ -40,7 +46,8 @@
     "require": {
         "illuminate/support": "^11.9|^12.0",
         "spatie/laravel-package-tools": "^1.16",
-        "php": "^8.3|^8.4"
+        "php": "^8.3|^8.4",
+        "kirschbaum-development/redactor": "dev-main"
     },
     "extra": {
         "laravel": {
